--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    nf-core/hicmap Nextflow config file
+    dhslab/hicmap Nextflow config file
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Default config options for all compute environments
 ----------------------------------------------------------------------------------------
@@ -68,7 +68,7 @@ try {
     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
 
-// Load nf-core/hicmap custom profiles from different institutions.
+// Load dhslab/hicmap custom profiles from different institutions.
 // Warning: Uncomment only if a pipeline-specific instititutional config already exists on nf-core/configs!
 // try {
 //   includeConfig "${params.custom_config_base}/pipeline/hicmap.config"
@@ -214,9 +214,9 @@ dag {
 }
 
 manifest {
-    name            = 'nf-core/hicmap'
+    name            = 'dhslab/hicmap'
     author          = """Mohamed Mahgoub"""
-    homePage        = 'https://github.com/nf-core/hicmap'
+    homePage        = 'https://github.com/dhslab/hicmap'
     description     = """3D genome contacts calling from HiC data"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=22.10.1'
