--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,4 +4,4 @@ contact_links:
     about: Please join the nf-core community here
   - name: "Slack #hicmap channel"
     url: https://nfcore.slack.com/channels/hicmap
-    about: Discussion about the nf-core/hicmap pipeline
+    about: Discussion about the dhslab/hicmap pipeline
