--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,10 @@ params {
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
+    chromsizes                 = null
 
+
+    resolutions                = '1000000,500000,250000,100000,50000,20000,10000,5000'
 
     // References
     genome                     = null
